fix bug overflow mobile and PC

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -47,10 +47,6 @@ body {
   background-color: #fff;
 }
 
-.wrapper {
-  overflow-x: hidden;
-}
-
 @keyframes slideRight {
   0% {
     transform: translateX(-10%);
